<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.HowToUseActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="-202dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_arrowback"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/arrow_back_ios_24"
                android:contentDescription="@string/arrowleft" />

            <TextView
                android:id="@+id/tv_howtouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/how_to_use_this_app"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/howtousethisapp10" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>