<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/descriptionLogotype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/geofinderlogo" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/latitude"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_latitude"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLength="9"
        android:hint="@string/example_latitude"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/longitude"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_latitude"
        />

    <EditText
        android:id="@+id/et_longitude"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:inputType="numberSigned|numberDecimal"
        android:layout_marginTop="5dp"
        android:maxLength="9"
        android:textSize="13sp"
        android:hint="@string/example_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
       />

    <TextView
        android:id="@+id/tv_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/zoom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_longitude"
        />

    <EditText
        android:id="@+id/et_zoom"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:maxLength="2"
        android:textSize="13sp"
        android:hint="Choose between 2 and 22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_zoom"
        />

    <Button
        android:id="@+id/button_finder"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/find_location"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:backgroundTint="@color/blue_nasa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_zoom" />

    <Button
        android:id="@+id/button_generatelocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/generate_random_location"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:backgroundTint="@color/blue_nasa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_finder" />

    <ImageButton
        android:id="@+id/button_menu"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_24" />


</androidx.constraintlayout.widget.ConstraintLayout>